--- a/config/amazon_s3.yml
+++ b/config/amazon_s3.yml
@@ -1,7 +1,8 @@
 development:
   max_file_size: 10485760       
-
+  acl: public-read
 test:
   
 production:
   max_file_size: 10485760       
+  acl: public-read
